<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


    <EditText
        android:id="@+id/etUserCode"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/str_tvEnterUserCode"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btConfirmUserCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text = "@string/str_confirm_user_code"
            />


        <Button
            android:id="@+id/btCancelUserCode"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text = "@string/str_cancel_user_code"
            />


    </LinearLayout>

</LinearLayout>