<?xml version="1.0" encoding="utf-8"?>


<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    >
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CreateProfile">


    <LinearLayout
        android:id="@+id/teamLayout"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">



        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/title_team_panel"
            android:layout_weight="2"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="20dp"/>


        <TextView
            android:id="@+id/tvPartition"
            style="@style/CreateProfile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/str_tvPartition"
            android:layout_weight="1"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPartition"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:ems="10"
                android:inputType="text"
                android:src="@drawable/ic_partition" />

            <Spinner
                android:id="@+id/partitionSpinner"
                android:layout_weight="5"
                android:layout_width="10dp"
                android:layout_height="match_parent"
                android:background="@null"/>
        </LinearLayout>




        <TextView
            android:id="@+id/tvLocation"
            style="@style/CreateProfile"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/str_tvLocation"
            android:layout_weight="1"/>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgLocation"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/location" />

        <EditText
            android:id="@+id/etLocation"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:ems="10"
            android:inputType="text"
            android:background="@null"/>


        </LinearLayout>


        <TextView
            android:id="@+id/tvPass"
            style="@style/CreateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_tvPass" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgPass"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/password" />



            <EditText
                android:id="@+id/etPanelCode"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="number"
                android:maxLength="4"
                android:background="@null"/>

        </LinearLayout>


        <TextView
            android:id="@+id/tvTeamId"
            style="@style/CreateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_tvTeamId" />



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgTeamId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/phone" />




            <EditText
                android:id="@+id/etTeamId"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="number"
                android:background="@null" />

        </LinearLayout>


        <TextView
            android:id="@+id/tvTeamModel"
            style="@style/CreateProfile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/str_tvTeamModel" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="2"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/imgAlarm"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/alarm" />




            <Spinner
                android:id="@+id/alarmSpinner"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="5"
                android:ems="10"
                android:inputType="text"
                android:background="@null" />

        </LinearLayout>

    </LinearLayout>






    <LinearLayout
        android:id="@+id/advancedLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/teamLayout">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:text="@string/title_advanced_panel"
            android:layout_weight="1"
            android:paddingLeft="20dp"
            android:textStyle="bold"
            android:textSize="20dp"/>





        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/alert_sound"/>


            <Switch
                android:id="@+id/switchNotifications"
                android:checked="true"
                android:layout_weight="5"
                android:layout_width="0dp"
                android:text="@string/str_alarmNotifications"
                android:textSize="20dp"
                android:paddingRight="60dp"
                android:paddingLeft="20dp"
                android:layout_height="match_parent"/>

        </LinearLayout>



        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:orientation="horizontal">


            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:src="@drawable/exclamation"/>


            <TextView
                android:id="@+id/editPanics"
                android:layout_weight="5"
                android:paddingLeft="20dp"
                android:gravity="center_vertical"
                android:layout_width="0dp"
                android:textStyle="bold"
                android:text="@string/str_editPanics"
                android:textSize="20dp"
                android:layout_height="match_parent"
                android:clickable="true"/>

        </LinearLayout>





    </LinearLayout>



    <LinearLayout
        android:id="@+id/pgmsLayout"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:orientation="vertical"
        android:layout_marginTop="100dp"
        android:paddingLeft="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/advancedLayout">

        <TextView
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:text="@string/title_pgm_panel"/>



        <TextView
            android:layout_height="0dp"
            style="@style/CreateProfile"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text = "@string/tv_pgm1"/>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <ImageView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/touch"/>


            <EditText
                android:id="@+id/etPgm1"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:inputType = "text"
                android:background="@null"
                android:text="PGM1"/>


        </LinearLayout>


        <TextView
            android:layout_height="0dp"
            style="@style/CreateProfile"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:text = "@string/tv_pgm2"/>

        <LinearLayout
            android:layout_height="0dp"
            android:layout_width="match_parent"
            android:layout_weight="1"
            android:orientation="horizontal">


            <ImageView
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:src="@drawable/touch"/>


            <EditText
                android:id="@+id/etPgm2"
                android:layout_height="match_parent"
                android:layout_width="0dp"
                android:layout_weight="2"
                android:inputType = "text"
                android:background="@null"
                android:text="PGM2"/>


        </LinearLayout>
    </LinearLayout>




    <TextView
            android:id="@+id/tvZones"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:text="@string/title_zones"
            android:layout_marginTop="100dp"
            app:layout_constraintTop_toBottomOf="@id/pgmsLayout"/>




    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listZones"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvZones"
        tools:listitem="@layout/alias_item"/>





    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addZones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listZones"
        android:src="@drawable/add_zone"/>










    <TextView
            android:id="@+id/tvUsers"
            android:layout_height="30dp"
            android:layout_width="match_parent"
            android:layout_weight="2"
            android:layout_marginTop="100dp"
            android:textSize="20dp"
            android:textStyle="bold"
            android:paddingLeft="20dp"
            android:text="@string/title_users"
            app:layout_constraintTop_toBottomOf="@id/addZones"/>



    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/listUsers"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tvUsers"
        tools:listitem="@layout/alias_item"/>




    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/addUsers"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listUsers"
        android:src="@drawable/add"/>

    <Button
        android:id="@+id/bt_delete_profile"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:text = "@string/str_delete_profile"
        android:visibility="invisible"
        android:layout_marginTop="100dp"
        app:layout_constraintTop_toBottomOf="@id/addUsers" />






</androidx.constraintlayout.widget.ConstraintLayout>

</ScrollView>